tela de feed 100% responsiva

--- a/src/assets/Css/feed/FeedPage.css
+++ b/src/assets/Css/feed/FeedPage.css
@@ -192,6 +192,10 @@
   .login-prompt p {
     font-size: 15px; /* Ajusta o tamanho da fonte do prompt de login */
   }
+
+  .content-noticias{
+    height: 100%;
+  }
 }
 
 /* Dispositivos móveis grandes (414px a 480px) */
