--- a/src/assets/Css/previsao/Previsao.css
+++ b/src/assets/Css/previsao/Previsao.css
@@ -61,7 +61,6 @@
   .primeira-linha {
     display: flex;
     margin-bottom: 20px;
-    border: 5px solid #272c3ff5;
     border-radius: 10px;
   }
   
@@ -72,6 +71,8 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 10px; /* Reduzi o padding para diminuir a altura */
     height: 100%; /* Altura automática */
+    margin-top: 18px;
+    border-radius: 3px;
   }
   
   /* Ajustes para o conteúdo interno dos cards */
